--- a/WebLUCIS/Map/static/Map/main.css
+++ b/WebLUCIS/Map/static/Map/main.css
@@ -158,3 +158,52 @@ body {
     height: 20px;
     margin-right: 10px;
 }
+
+.node {
+    cursor: pointer;
+}
+
+.node rect {
+    fill: #fff;
+    stroke: steelblue;
+    stroke-width: 2px;
+    transition: fill 0.3s;
+}
+
+.node text {
+    font: 12px sans-serif;
+    pointer-events: none;
+}
+
+.link {
+    fill: none;
+    stroke: #ccc;
+    stroke-width: 2px;
+}
+
+#tree-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+}
+
+/* Limit the modal dimensions but allow it to grow dynamically */
+.modal-dialog {
+    max-width: 95vw;
+    /* Adjusts the width relative to viewport */
+    max-height: 95vh;
+    /* Adjusts the height relative to viewport */
+    width: auto;
+    /* Allows width to adjust */
+}
+
+.modal-content {
+    overflow: visible;
+    background: rgba(255, 255, 255, 0.31);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
