--- a/WebLUCIS/Map/static/Map/main.css
+++ b/WebLUCIS/Map/static/Map/main.css
@@ -132,3 +132,29 @@ body {
     border: 2px solid #000;
     /* Border for selected color */
 }
+
+.hidden {
+    display: none;
+}
+
+#legend {
+    position: absolute;
+    bottom: 25px;
+    right: 10px;
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1001;
+}
+
+.legend-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.legend-color {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
