--- a/WebLUCIS/Map/templates/partials/control_panel.html
+++ b/WebLUCIS/Map/templates/partials/control_panel.html
@@ -14,26 +14,28 @@
   </div>
 
   <div class="tab">
-    <button class="tablinks" onclick="clickHandle(event, 'Region')" id="defaultOpen"><i
+    <button class="tablinks" data-tab="Region" onclick="clickHandle(event, 'Region')" id="defaultOpen"><i
         class="bi bi-globe-europe-africa"></i>
       <span class="hover-text">Region</span></button>
-    <button class="tablinks" onclick="clickHandle(event, 'Buffer')"><i class="bi bi-stack"></i>
-      <span class="hover-text">Buffer</span></button>
-    <button class="tablinks" onclick="clickHandle(event, 'Basemap')"><i class="bi bi-sliders"></i>
+
+    <button class="tablinks" data-tab="Basemap" onclick="clickHandle(event, 'Basemap')"><i class="bi bi-sliders"></i>
       <span class="hover-text">Settings</span></button>
+
+    <button class="tablinks" data-tab="Buffer" onclick="clickHandle(event, 'Buffer')"><i class="bi bi-stack"></i>
+      <span class="hover-text">Buffer</span></button>
   </div>
 
   <div id="Region" class="tabcontent">
-    <form id="choose_form">
+    <!-- <form id="choose_form">
       <label for="choose">Select Ghanammdas/Suitability</label>
       <select id="choose" class="form-control mb-3">
         <option value="" selected disabled>Select Ghanammdas/Suitability</option>
         <option value="district_form">Ghana mmdas</option>
         <option value="suitability_form">Suitability</option>
       </select>
-    </form>
+    </form> -->
 
-    <form id="suitability_form" style="display:none">
+    <!-- <form id="suitability_form" style="display:none"> -->
       <!-- {% for field in suitability_form %}
       {% if field.name != "geom" %} {# Exclude the geom field #}
       <div>
@@ -42,15 +44,16 @@
       </div>
       {% endif %}
       {% endfor %} -->
-      <select name="field_select" id="field_select" class="form-control mb-2">
+      <!-- <select name="field_select" id="field_select" class="form-control mb-2">
         <option value="">Select Suitability</option>
         {% for field in suitability_form %}
         {% if field.name != "geom" %}
         <option value="{{ field.label }}">{{ field.label }}</option>
         {% endif %}
         {% endfor %}
-      </select>
-      <div id="mapcontroldiv" style="display:none;">
+      </select> -->
+
+      <!-- <div id="mapcontroldiv" style="display:none;">
         <div>Fill Color</div>
         <div id="selectedcolorpalette" class="palette-container">
           <div class="color" style="background-color: rgb(36, 86, 104);"></div>
@@ -90,53 +93,110 @@
               </tr>
             </thead>
             <tbody>
-              <!-- Empty row for initial display -->
-              <tr>
-                <td><input class="form-control" type="number" name="start[]" /></td>
-                <td><input class="form-control" type="number" name="end[]" /></td>
-                <td><input class="form-control" type="number" name="new[]" /></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <br />
+              
+      <tr>
+        <td><input class="form-control" type="number" name="start[]" /></td>
+        <td><input class="form-control" type="number" name="end[]" /></td>
+        <td><input class="form-control" type="number" name="new[]" /></td>
+      </tr>
+      </tbody>
+      </table>
+  </div>
+</div> -->
+      <!-- <br />
       <div class="align-self-end">
-        <button id="show-suitability-btn" class="btn btn-primary" type="button">Submit</button>
-      </div>
-    </form>
-    <form id="district_form" style="display:none">
+        <button id="show-suitability-btn" class="btn btn-primary" type="button">Submit</button> -->
+        <!-- <div id="loading"
+          style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1000;">
+          <img
+            src="https://3.bp.blogspot.com/-McqgscdbKQQ/Vq3jmL1geRI/AAAAAAAAAZU/uXtD1KfQ6pM/s200/loader%2B%25281%2529.gif">Loading....
+        </div> -->
+        <!-- <div class="progress-container"
+          style="width: 100%; background-color: #f3f3f3; border: 1px solid #ccc; margin-top: 20px;">
+          <div id="progress-bar" style="width: 0%; height: 15px; background-color: #4caf50;"></div>
+        </div> -->
+      <!-- </div>
+    </form> -->
+    <form id="district_form">
       {% csrf_token %}
       <label for="{{ form.region.id_for_label }}">{{ form.region.label }}</label>
-      {% render_field form.region class="form-control mb-2" hx-get="/load_districts/" hx-target="#id_district" %}
+      {% render_field form.region class="form-control mb-2" hx-get="/load_districts/" hx-target="#id_district" onchange="zoomToRegion(this.value)" %}
 
       <label for="{{ form.district.id_for_label }}">{{ form.district.label }}</label>
-      {% render_field form.district class="form-control mb-3" %}
-      <div class="align-self-end">
+      {% render_field form.district class="form-control mb-3" onchange="zoomToRegion(this.options[this.selectedIndex].text)" %}
+      <!-- <div class="align-self-end">
         <button id="show-mmda-btn" class="btn btn-primary" type="submit">Submit</button>
+      </div> -->
+      <div class="align-self-end">
+        <button class="btn btn-primary next-btn" type="button" onclick="">Next</button>
       </div>
+
     </form>
 
   </div>
 
 
   <div id="Buffer" class="tabcontent">
-    <form id="buffer_form">
-      {% csrf_token %}
-      <label for="{{ form_buffer.distance.id_for_label }}">{{ form_buffer.distance.label }}</label>
-      {% render_field form_buffer.distance class="form-control mb-2" %}
-
-      <label for="{{ form_buffer.unit.id_for_label }}">{{ form_buffer.unit.label }}</label>
-      {% render_field form_buffer.unit class="form-control mb-3" %}
-
-      <div class="align-self-end">
-        <button id="show-buffer-btn" class="btn btn-primary" type="submit">Run</button>
+    <select id="intervalMethod" class="form-control mb-2">
+      <option value="quantify">Quantify (Equal Interval)</option>
+      <option value="quantile">Quantile</option>
+    </select>
+    <div id="mapcontroldiv">
+      <div>Fill Color</div>
+      <div id="selectedcolorpalette" class="palette-container">
+        <div class="color" style="background-color: rgb(36, 86, 104);"></div>
+        <div class="color" style="background-color: rgb(15, 114, 121);"></div>
+        <div class="color" style="background-color: rgb(13, 143, 129);"></div>
+        <div class="color" style="background-color: rgb(57, 171, 126);"></div>
+        <div class="color" style="background-color: rgb(110, 197, 116);"></div>
+        <div class="color" style="background-color: rgb(169, 220, 103);"></div>
       </div>
-    </form>
+      <div class="colorpalettediv">
+        <div>
+          <label for="step-input">Steps</label>
+          <input class="form-control" type="number" id="step-input" value="6" max="7" placeholder="Step">
+        </div>
+        <div>
+          <label for="color-type-select">Color Type</label>
+          <select class="form-control mb-3" id="color-type-select">
+            <option value="diverging">Diverging</option>
+            <option value="sequential">Sequential</option>
+            <option value="qualitative">Qualitative</option>
+            <option value="singlehue">Single Hue</option>
+            <option value="all" selected>All</option>
+          </select>
+        </div>
+        <div id="color-palette-container" class="palette-container"></div>
+      </div>
+    </div>
   </div>
 
   <div id="Basemap" class="tabcontent">
-    <p>add more</p>
+    <label for="category">Category:</label>
+    <select id="category" class="form-control mb-3" onchange="updateSubcategory()">
+      <option value="">Select...</option>
+      <option value="Urban">Urban</option>
+      <option value="Agriculture">Agriculture</option>
+      <option value="Conservation">Conservation</option>
+    </select>
+
+    <label for="subcategory" class="hidden">Sub-category:</label>
+    <select id="subcategory" class="form-control mb-3 hidden" onchange="updateObjective()">
+      <option value="">Select...</option>
+    </select>
+
+    <label for="objective" class="hidden">Objective:</label>
+    <select id="objective" class="form-control mb-3 hidden" onchange="updateDetails()">
+      <option value="">Select...</option>
+    </select>
+
+    <label for="details" class="hidden">Sub-objective:</label>
+    <select id="details" class="form-control mb-3 hidden" onchange="checkNextButton()">
+      <option value="">Select...</option>
+    </select>
+    <div class="d-flex align-self-end">
+      <button id="category-next-btn" class="btn btn-primary hidden next-btn">Next</button>
+    </div>
   </div>
 
 </div>
