--- a/WebLUCIS/Map/templates/partials/load_districts.html
+++ b/WebLUCIS/Map/templates/partials/load_districts.html
@@ -1,3 +1,3 @@
 {% for district in districts %}
-  <option value="{{ district.gid }}">{{ district.district }}</option>
+<option value="{{ district.gid }}" district-c="{{ district.district_c }}">{{ district.district }}</option>
 {% endfor %}
